--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^6.10.14",
     "@nestjs/mongoose": "^7.0.1",
     "@nestjs/platform-express": "^6.10.14",
+    "bcrypt": "^4.0.1",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
     "mongoose": "^5.9.15",
